quanteda 0.9.7
==============

*  Improve performance of `selectFeatures.tokenizedTexts()`.

*  Improve performance of rbind.dfm()

*  Added support for different docvars when importing multiple files using textfile().  (#147)

*  Add support for comparison dispersion plots in `plot.kwic()`. (#146)

Bug fixes
---------

*  Fixed bug in textfile() where source is a remote .zip set.  (#172)

*  Fixed bug in wordstem.dfm() that caused an error if supplied a dfm with a feature whose total frequency 
   count was zero, or with a feature whose total docfreq was zero.  Fixes #181.



quanteda 0.9.6 
==============

*  Improved Naive Bayes model and prediction, `textmodel(x, y, method = "NB")`, now works correctly on k > 2.

*  Improved tag handling for segment(x, what = "tags")

*  Added valuetype argument to segment() methods, which allows faster and more robust segmentation on large texts.

*  corpus() now converts all hyphen-like characters to simple hyphen

*  segment.corpus() now preserves all existing docvars.

*  corpus documentation now removes the description of the corpus object's structure since too many users were accessing these internal elements directly, which is strongly discouraged, as we are likely to change the corpus internals (soon and often).  Repeat after me: "encapsulation".

*  Improve robustness of `corpus.VCorpus()` for constructing a corpus from a tm Corpus object.

*  Add UTF-8 preservation to ngrams.cpp.

*  Fix encoding issues for textfile(), improve functionality.

*  Added two data objects: Moby Dick is now available as `mobydickText`, without needing to access a zipped text file; `encodedTextFiles.zip` is now a zipped archive of different encodings of (mainly) the UN Declaration of Human Rights, for testing conversions from 8-bit encodings in different (non-Roman) languages.

*  phrasetotoken() now has a method correctly defined for corpus class objects.
