@@ -22,6 +22,7 @@ S3method(corpus,VCorpus)
 S3method(corpus,character)
 S3method(corpus,corpusSource)
 S3method(corpus,data.frame)
+S3method(corpus,kwic)
 S3method(dfm,character)
 S3method(dfm,corpus)
 S3method(dfm,tokenizedTexts)
